--- a/backendd/package.json
+++ b/backendd/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "inotebook - ur notebook on cloud",
   "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +12,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
