--- a/backendd/package.json
+++ b/backendd/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "inotebook - ur notebook on cloud",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
